@@ -1,15 +1,27 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA256
+Hash: SHA512
 
 DIST espresso-ab-1.0.tar.gz 146662 SHA256 788a47b64258b8371e138c267da6043be324d49058462efe2f6870515bfd5479 SHA512 360bdf3c9d2cc552e9af6e9e0ac543e96c496f182a1f8eadf8925aed878425a158a10672feaa50e970c0df5fe7a754b0c7496c5d7f6f729b27f34a7cdf0ca12f WHIRLPOOL 152573410ad01f2a9d4227ab9a039d2ed995439343f12c9ceefb425bae9c5c08b0c4741d966922f22e8dd3cb34969b23717d5d34f6d3e287c36b5dcc6700d2b0
-EBUILD espresso-ab-1.0-r1.ebuild 566 SHA256 069823b8530587bca1bd63e519cf3851e887635c7d8752824f54ffcd9b9c28fe SHA512 773a76903f51974d236def4a2d99d0bb9aad3c20f29add034b2f1edfc024a51e719d0e8211a87dc0cacdbfb3eb6463553100853c13aceb9afd293a70cdd3feaf WHIRLPOOL 9358dce3d1f940b0616fe80050092875ddf64398d9edbb4e3dfd2e2e70bd2045336246d1fa8fb06f27662e335a97b7e3289759f35826672f0f4bf170ceb83dfe
-EBUILD espresso-ab-1.0.ebuild 665 SHA256 34170c1242b32f272ea1ab1ca2d492f0ecc1ef30d805ae446eec6aa6d2fdd09b SHA512 de3be9dafa8e286172322b0986af603bbdc4c3b53925bcb789bb6633093fa5f8f5260ce0a0d3e3c508dd810b2d2c06f7f2892512a9a48d55436c07b1c95c7641 WHIRLPOOL b2f5ba35407cc20a02c9e9f7d876b002b80004a97f7b44d05f4a549d03d55d83c2faa43e1134213cd3f86cd29831bc5c815b3f1043bd2254e9082fe14bf714ca
-MISC ChangeLog 1495 SHA256 171c0d116c2b6d560580cf2a9d53cca178555a25a91bb1ffb9f3705f9f06e32f SHA512 95e9d89bb58de52aa32de17998205b5eef0ae7399ff1aabe00d6304bf4bd64bcf4ed731c649ec07f36e51f16912185597e3a6f30ae469ec81ced928888742cc6 WHIRLPOOL 388859f3bde4ad8bf27e724950f5678dc40820750a401cf0114dd1d483d5ffbb193c119ddab1350b57f7aad7a205c7c0ddea615118ca31176f8f480711c1fe13
+EBUILD espresso-ab-1.0-r1.ebuild 534 SHA256 88bd7769b1e851895660d624d5609d25040c27caaf3f55c6e4e5933dd3f61264 SHA512 8162c7b96a1c9030761c0a47e75f6d9d6346dacd76c19b31dd654c337e733e1bbcfb059e1d9debd7090e9efd9a98c17513d9dec5b351cb903d93dd2d39dd7131 WHIRLPOOL a0ecd9fbf22d69cda3c0cf410b4499fa74adb50fc710091a6db278ce37985a89a4dccbbf2e27dce4a331ad4d8e75fa77233bd39eed3c7beb9971929e49452767
+EBUILD espresso-ab-1.0.ebuild 654 SHA256 0313760a478e83d6b83f75bd7b3ee8345e688e560ba75ecdbc88cd799ce56031 SHA512 9578363acaa1f6d48de7f398ebaddde262e070e5efa0be5849ec74682e3e39015e669f3efcec4a3d30fb403900a46645b61c26b865cfe6d07e4e1783fc5bbaff WHIRLPOOL f687ba0572e2c20ea5796cb6c1275bd820200212a8f11335fcf6ce5d72c2e0c3ada50a9ae485382a894e510496dba250280d3b58fae475b2d8a887f680ddd87a
+MISC ChangeLog 1625 SHA256 279a51ef13b9661609b1497aa14dd8f0e59441de18adef0a53194056d47caa2e SHA512 0fa3aeda441c6956afb64e919b8866c35e958a4c316708e955f80451d8ab2623d711ea2a00c4e67b6a84ee22a8bec1fb4689d4cfdd841412f23d8f861d6ec2ea WHIRLPOOL d0cd2b218e24c77af6cd60c1908ddfd8a8c68d8ff47f28f2f8a4af8c9cc94ba406c7384d6a00562cd81b2e9691bf360e970a8cdf1cfed0a03d494adb9fcb0933
 MISC metadata.xml 278 SHA256 08827ab6403c6c5ada9b6662be1baf6faced51109684c26df5e2efccc46d6b5b SHA512 bb979a2ffc9e1e696e076e9b884aca7172c4ec9c8a52d62e58a2516ae254275f5115294c61f5f4878bc66b07e720bc77a30a3f271c9cedb69840b49388f6f0a9 WHIRLPOOL 47b56470030d8e0ece08bbc386af68e5d21e543974c56ff0f67c41a517b77a928c7f023a79108ea208fbab5f4d6648a99de0472c7f512a0a4a57b8400402cf87
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2
+Version: GnuPG v2.0
 
-iEYEAREIAAYFAlQDJrYACgkQQe4uqXYgU9WJVwCeKvxGJp8hHUBlXj6EBqUw1EY0
-328AmwYoIUHj5yR67lQWKlPUimcz0Jem
-=TK3e
+iQJ8BAEBCgBmBQJVAtGrXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQyQ0JDQjFGMzBDQ0UxMjFGNENDNDgxMDdC
+OUQ0RjIzMUJEMTU1OEFCAAoJELnU8jG9FVir4MYP/jg2J2eGgG6m2NFFlP3tfGuA
+yT0bOrZZ6yFt6dTzeoPpQ/K4lDj3YqbY6tGxyXtrnPC9Xxu/eAHfpuoxSx05NtmR
+u48Ua+uhbYH6PpKCtNUQ12aKyeME4DBqVJkkmimx98U2HBIiWcfC2hvIIrtHs3RL
+v+HwCZtXOyX9KajS01eWK39LgJezMJTwYissELmB5OBrb9FVdj5qkP9Bs9DnREiI
+1Bkq/nLkB91nXI3Dqi/nVVEOXe1/XWoaaglgahU+/tvObgNkvwpV793gHp2CoXJ5
+am6kj6Hf5VCrIBbH9aSwXN/lzForWKiJk+owETvkYP/X38QT0l1hQZW7PYH9g1+I
+JGd0FS6saEyo/4AL86rivi7hrr5oU4NOKHWB/Gu6YUMCv8vlFL4hCkD6sisKq57T
+sLEYq6K6iDcJF3Eu75n4L2CF5rq7TmM6IIPcDi8h6AFaZwv3wBF6VxxspEqkHhLE
+/2RMtKkXjG++hyKErUc8UGdmn+dm06pq8Ofrlp4T3umPt4nTwiAzg++kbupCGdep
+he5yPISFKZ/ZOdF/jT3VjGMsjlCVKWumid0B7loFHYkEEUlWYMFGhp8wcbUxBuW0
+FnGHmByYOOgvMV9SYKK392rWPMsSQNEgGnomCpKO9Syqwa6eBi5XTL5g7e8IkpZu
+B7/7T6XolKVbSYmF3tw4
+=TWKe
 -----END PGP SIGNATURE-----
