@@ -1,6 +1,6 @@
-# Copyright 1999-2009 Gentoo Foundation
+# Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sci-electronics/espresso-ab/espresso-ab-1.0.ebuild,v 1.3 2009/09/23 20:00:35 patrick Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-electronics/espresso-ab/espresso-ab-1.0.ebuild,v 1.4 2015/03/13 12:01:46 jlec Exp $
 
 IUSE=""
 
@@ -22,5 +22,5 @@ src_compile() {
 src_install() {
 	einstall || die "make install failed"
 
-	dodoc COPYING README
+	dodoc README
 }
